...
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="community_input_page">Community Input Page.</string>
    <string name="community_description">Community Description</string>
    <string name="name_of_community">Name of Community</string>
    <string name="save">SAVE</string>
    <string name="community_assigned_to">Community Assigned To</string>
    <string name="community_Title">Community</string>
    <string name="CommunityName">Community Name</string>
    <string name="community_selection_page">Community Selection Page</string>
    <string name="listCommunity">List of Community</string>
    <string name="community_update_page">Community Update Page</string>
    <string name="update">UPDATE</string>
    <string name="required_field">Required Field</string>
...
